[package]
name = "planif"
authors = ["mattrobineau"]
description = "planif is a builder wrapper for the windows task scheduler API of windows-rs."
license = "MIT"
repository = "https://github.com/mattrobineau/planif"
version = "0.0.0-alpha"
edition = "2021"
keywords = ["scheduled", "task", "windows"]
categories = ["os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"

[dependencies.windows]
version = "0.34.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_TaskScheduler",
    "Win32_System_Com",
    "Win32_System_Ole",
]
