[package]
name = "planif"
authors = ["Matt Robineau <matt@mrbn.ca>"]
description = "planif is a builder pattern wrapper for the windows task scheduler API of windows-rs."
license = "MIT"
repository = "https://github.com/mattrobineau/planif"
version = "1.0.0"
edition = "2021"
keywords = ["scheduled", "task", "windows", "schedule", "scheduler"]
categories = ["os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
chrono = "0.4"

[dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_TaskScheduler",
    "Win32_System_Com",
    "Win32_System_Ole",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
